# bruty

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  server_run.txt
.devcontainer/: devcontainer.json
.github/workflows/: build-and-release.yml  build.yml
bruty_client/: Cargo.toml
bruty_client/src/: client_threads.rs  main.rs  payload_handlers.rs  windows.sh
bruty_server/: Cargo.toml  Shuttle.toml
bruty_server/migrations/: 0001_init.sql
bruty_server/src/: main.rs  payload_handlers.rs  server_threads.rs
bruty_share/: Cargo.toml
bruty_share/src/: lib.rs  logger.rs  types.rs
old/: v0.0.1.rs  v0.2.0.rs
src/: main.rs
