[package]
name = "bruty_server"
authors = ["skifli"]
version = "0.5.1"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
flume = "0.11.0"
futures-util = "0.3.30"
log = "0.4"
opendal = "0.51"
rmp-serde = "1.1.2"
serde = "1.0.217"
shuttle-axum = { version = "0.51.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["opendal-postgres"] }
tokio = { version = "1.40.0", features = ["full"] }

bruty_share = { path = "../bruty_share" }
