[package]
name = "bruty_share"
authors = ["skifli"]
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
fern = { workspace = true, features = ["colored"] }
flume = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shuttle-shared-db = { workspace = true, features = ["opendal-postgres"] }
tokio = { workspace = true, features = ["full"] }
